added autoload to vendor folder
