# src/Modules/User/SwaggerDTO/User/UserRequestDTO.php
@@ -3,10 +3,14 @@
 namespace Modules\User\SwaggerDTO\User;
 
 use OpenApi\Attributes as OA;
+use Spatie\LaravelData\Data;
+use Spatie\LaravelData\Support\Validation\ValidationContext;
 
 #[OA\Schema(schema: "UserRequestDTO")]
-class UserRequestDTO
+class UserRequestDTO extends Data
 {
+
+
     #[OA\Property(type: 'string', example: 'محمدرضا')]
     public string $first_name;
 
@@ -24,4 +28,18 @@ class UserRequestDTO
 
     #[OA\Property(type: 'string', example: '09123456789')]
     public ?string $mobile;
+
+    public static function rules(ValidationContext $context = null): array
+    {
+        return [
+            'first_name' => ['required', 'string', 'min:2', 'max:150'],
+            'last_name' => ['required', 'string', 'min:2', 'max:150'],
+            'username' => ['required', 'string', 'min:2', 'max:150'],
+            'email' => ['nullable', 'string', 'max:300'],
+            'mobile' => ['required', 'string', 'min:5', 'max:20'],
+            'password' => ['required', 'string', 'min:6'],
+        ];
+    }
 }
+
+
